--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 html, body {
-  margin: 0;
+  margin: 10;
   padding: 0;
 }
 canvas {
-  margin-left : 250px;
-  margin-top : 50px;
+ 
   display: block;
+  border: 12px solid brown;
 }
